style.sass
$phone-width: 1200px

.invisible-scrollbar::-webkit-scrollbar
    display: none

body
    margin: 0
    padding: 0
    font-family: 'Space Grotesk', sans-serif
    text-align: center
    overflow-x: hidden

a
    text-decoration: none
    color: black

.email
    text-decoration: none
    color: black
    font-size: 30px

.arrow
    position: fixed
    left: 50%
    margin-right: -50%
    transform: translate(-50%, -50%)

    bottom: 1vh
    text-align: center

    display: flex
    flex-direction: column
    align-content: center
    justify-content: center

    opacity: 0
    transition-duration: 0.1s

    p
        font-size: 36px
        margin: 0

    &.arrow-pulse
        opacity: 1

    i
        font-size: 26px
 
h1
    font-size: 60px

h2
    font-size: 40px

p
    font-size: 30px

@media (max-width: $phone-width)
    h1
        font-size: 1.9rem

    h2
        font-size: 1.3rem

    p
        font-size: 1.1rem

.center-text
    text-align: center
    margin: 0 10vw 0 10vw

.scroller
    height: 100vh
    width: 100vw
    margin: 0
    padding: 0
    overflow-y: scroll
    scroll-snap-type: y mandatory

.page
    scroll-snap-stop: always
    scroll-snap-align: center 
    height: 100vh
    width: 100vw
   
    display: flex
    flex-direction: column
    justify-content: center

.page-content
    display: flex

    flex-direction: column
    justify-content: center
    align-content: center

    opacity: 0
    transition-delay: .5s
    transition-duration: 1.5s
    width: 100vw

.page-content.active
    opacity: 1

#logo-content
    opacity: 1

.center-img
    object-fit: contain
    width: 70vw
    margin: 0 15vw 0 15vw

@media (max-width: $phone-width)
    .center-img
        margin: 0 5vw 0 5vw
        width: 90vw 
    
.mid-img
    object-fit: contain
    height: 20vh

.img-row
    display: flex
    justify-content: space-evenly
    flex-direction: row
    margin: 0 10vw 0 10vw
    width: 80vw
    height: 15vh

@media (max-width: $phone-width)
    .img-row
        display: grid
        grid-template-columns: 1fr 1fr
        grid-template-rows: 1fr 1fr

        justify-items: center
        align-items: center

.img-row-item
    padding: 2%
    object-fit: contain

@media (max-width: $phone-width)
    .img-row-item
        width: min(80%, 30vh)

.page-split
    width: 80%
    height: 100%
    margin: 0 10% 0 10%

    display: grid
    justify-items: center
    align-items: center
    grid-template-columns: 1fr 1fr
    grid-template-rows: 1fr

@media (max-width: $phone-width)
    .page-split
        display: flex
        flex-direction: column
        justify-content: center
        align-content: center
        object-fit: contain

.img-grid-item
    width: 70%
    height: auto
    margin: 0 15% 0 15%

@media (max-width: $phone-width)
    .img-grid-item
        height: 50%
        margin: 0
        object-fit: contain

.text-left
    text-align: left

// Text animation
.step
    opacity: 0
    transition-duration: 2s

.step-active
    opacity: 1
    
// Nav Bar
.nav
    transition-duration: 0.25s
    position: absolute

    margin: 0
    padding: 0

    top: 2vh
    left: 2vh

    text-align: left
    opacity: 0

.nav-visible
    opacity: 1

#nav-icon
    font-size: 40px

#nav-links
    list-style: none
    font-size: 24px

